results/verify_sanity.txt~3c4b3b258c97fc4f77d508994fcdf497d9cbd7db
lejit> configure (lib + exe + test)
Configuring lejit-0.1.0.0...
lejit> build (lib + exe + test)
Preprocessing library for lejit-0.1.0.0..
Building library for lejit-0.1.0.0..
[ 8 of 22] Compiling DSL.Typed
[13 of 22] Compiling Generate.Parser
[14 of 22] Compiling Generate.QQ [Generate.Parser changed]
[15 of 22] Compiling IonMonkeyGenerated.Helpers [Generate.QQ changed]
[17 of 22] Compiling IonMonkeyGenerated.Operations [IonMonkeyGenerated.Helpers changed]
[18 of 22] Compiling IonMonkeyGenerated.Verify [IonMonkeyGenerated.Helpers changed]
[19 of 22] Compiling V8Generated.Helpers [Generate.QQ changed]

/home/evan/Research/vera/src/V8Generated/Helpers.hs:20:15: error:
    • Error in: src/V8Generated/code.cpp

262 |   if (BitsetType::Is(getBoundary(BoundariesSize() - 1).internal, bits)) {
                      ^
    "src/V8Generated/code.cpp" (line 262, column 17):
    unexpected ":"
    expecting statement

    • In the quasi-quotation: [progFile|src/V8Generated/code.cpp|]
   |
20 | p = [progFile|src/V8Generated/code.cpp|]
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^

--  While building package lejit-0.1.0.0 (scroll up to its section to see the error) using:
      /home/evan/.stack/setup-exe-cache/x86_64-linux-tinfo6/Cabal-simple_mPHDZzAJ_2.4.0.1_ghc-8.6.5 --builddir=.stack-work/dist/x86_64-linux-tinfo6/Cabal-2.4.0.1 build lib:lejit exe:lejit-exe test:lejit-test --ghc-options ""
    Process exited with code: ExitFailure 1
